# video-flows

./: .gitignore  CLAUDE.md  LICENSE  PACKS.md  README.md  STATUS.md  TIME.md  pyproject.toml  requirements.txt  run_test_flow.py  sweep_rd_inject.py  warp_chain.md
.github/workflows/: ci.yml
brain-wipe-shaders/: abyssal_drift.fs  ulp-abyssal-jellies-v4.fs  ulp-bioluminescent-field.fs  ulp-brain-wipe-chladni.fs  ulp-brain-wipe-plasma.fs  ulp-brain-wipe-rd.fs  ulp-brain-wipe-tunnel.fs  ulp-moire-interference.fs  ulp-voronoi-flow.fs  ulp-warp-curl.fs  ulp-warp-fbm.fs  ulp-warp-gravitational.fs  ulp-warp-kaleidoscope.fs  ulp-warp-ripple.fs  ulp-warp-twist.fs  ulp-warp-voronoi.fs
packs/starter/: README.md  stacks.yaml
packs/starter/shaders/: starter_cells.fs  starter_drift.fs  starter_duotone.fs  starter_edges.fs  (+21 more)
pipeline/: __init__.py  cache.py  cli.py  config.py  evolve.py  ffmpeg.py  gl.py  isf.py  recipe.py  registry.py
pipeline/flows/: __init__.py  brain_wipe.py  compositing_lab.py  evolve_stacks.py  examples.py  show_reel.py  stooges.py  time_lab.py  transition_lab.py
pipeline/tasks/: __init__.py  color.py  composite.py  cut.py  glitch.py  mask.py  sequence.py  shader.py  time.py  transform.py  transition.py
scripts/: create_pack.py  generate_stacks.py
shaders/: bit_crush.fs  block_shift.fs  bruise.fs  chromatic_shift.fs  cyanotype.fs  databend.fs  duotone.fs  echo.fs  edge_glow.fs  feedback_zoom.fs  gradient_map.fs  heat_sig.fs  lens_warp.fs  neon_bleed.fs  oxide.fs  pixel_sort.fs  posterize.fs  scan_tear.fs  shear.fs  stereo_project.fs  warp.fs
