[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ulp-video-pipeline"
version = "0.1.0"
description = "Automated video processing pipeline for the Undersea Lair Project"
requires-python = ">=3.10"
dependencies = [
    "prefect>=3.0",
    "moderngl>=5.8",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[project.optional-dependencies]
dev = [
    "pytest",
]
